--- a/hieradata/rspec/profile_jenkinscontroller.yaml
+++ b/hieradata/rspec/profile_jenkinscontroller.yaml
@@ -106,6 +106,8 @@ profile::jenkinscontroller::jcasc:
           description: "Ubuntu 20.04 LTS"
           imageDefinition: jenkins-agent-ubuntu-20.04-amd64
           os: "ubuntu"
+          os_version: "20.04"
+          launcher: inbound
           storageAccount: SuperSecretThatShouldBeEncryptedInProduction
           location: "East US 2"
           instanceType: Standard_D4s_v3 # 4 vCPUS / 16 Gb
@@ -122,11 +124,12 @@ profile::jenkinscontroller::jcasc:
           virtualNetworkResourceGroupName: "prod-jenkins-public-prod"
           subnetName: "ci.j-agents-vm"
           spot: true
-          initScript: *datadogInitUserData
         - name: "win-2019" # The name must not contains "windows" or Azure API complains :facepalm:
           description: "Windows 2019"
           imageDefinition: jenkins-agent-windows-2019-amd64
           os: "windows"
+          os_version: "2019"
+          launcher: ssh
           storageAccount: SuperSecretThatShouldBeEncryptedInProduction
           location: "East US 2"
           instanceType: Standard_D4s_v3 # 4 vCPUS / 16 Gb
@@ -141,10 +144,7 @@ profile::jenkinscontroller::jcasc:
           virtualNetworkResourceGroupName: "prod-jenkins-public-prod"
           subnetName: "ci.j-agents-vm"
           spot: false
-          initScript:
-            - <powershell>
-            - (Get-Content C:\\ProgramData\\Datadog\\datadog.yaml -Raw) -Replace 'api_key:', 'api_key: keytokeepsecret' | Set-Content C:\\ProgramData\\Datadog\\datadog.yaml
-            - </powershell>
+          agentDir: 'C:/Foo'
     azure-container-agents:
       aci-windows:
         credentialsId: "azure-credentials"
