--- a/hieradata/rspec/profile_jenkinscontroller.yaml
+++ b/hieradata/rspec/profile_jenkinscontroller.yaml
@@ -60,44 +60,7 @@ profile::jenkinscontroller::jcasc:
               - node
               - webbuilder
               - ruby
-            imagePullSecrets: dockerhub-credential
-    ec2:
-      aws-us-east-2:
-        region: us-east-2
-        credentialsId: "aws-credentials-jenkins-ci"
-        sshKeysCredentialsId: "ec2-agent-ssh-2021-06"
-        agent_definitions:
-          - description: "Ubuntu 20.04 LTS datadog"
-            maxInstances: 1
-            instanceType: T3Xlarge # 4 vCPUs / 16 Gb
-            os: "ubuntu"
-            os_version: "20.04"
-            architecture: "amd64"
-            labels:
-              - ec2_datadog
-            useAsMuchAsPossible: false
-            userData: &datadogInitUserData
-              - "#!/bin/bash"
-              - "sed 's/api_key:.*/api_key: tokeepsecret' /etc/datadog-agent/datadog.yaml.example > /etc/datadog-agent/datadog.yaml"
-              - "sed -i 's/# site:.*/site: datadoghq.com/' /etc/datadog-agent/datadog.yaml"
-              - mkdir /var/log/datadog
-              - chown dd-agent:dd-agent /etc/datadog-agent/datadog.yaml
-              - chmod 640 /etc/datadog-agent/datadog.yaml
-              - chown dd-agent:dd-agent /var/log/datadog
-              - chmod 770 /var/log/datadog
-              - systemctl restart datadog-agent.service
-              - rm -f /etc/sudoers.d/90-cloud-init-users
-          - description: "Windows 2022"
-            maxInstances: 5
-            instanceType: A1Xlarge # 4 vCPUs / 8 Gb
-            os: "windows"
-            os_version: "2022"
-            architecture: "arm64"
-            labels:
-              - windows
-            useAsMuchAsPossible: false
-            spot: false
-            userData: *datadogInitUserData
+            imagePullSecrets: dockerhub-credentials
     azure-vm-agents:
       azureCredentialsId: "azure-credentials"
       resource_group: eastus-cijenkinsio
@@ -170,7 +133,6 @@ profile::jenkinscontroller::plugins:
   - configuration-as-code
   - credentials
   - credentials-binding
-  - ec2
   - github-branch-source
   - kubernetes
   - ldap
