chore(updatecli) fix warnings for 0.54.x
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/docker-ce.yaml
+++ b/updatecli/weekly.d/docker-ce.yaml
@@ -19,6 +19,8 @@ sources:
     kind: shell
     spec:
       command: bash ./updatecli/scripts/docker-ce-updates.sh jammy
+      environments:
+        - name: PATH
 
 conditions:
   checkIfHieradataCommonHasDockerVersionKey:
