--- a/updatecli/weekly.d/jenkinscontroller-agents-non-packer.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-agents-non-packer.yaml
@@ -52,7 +52,7 @@ targets:
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-webbuilder"
+      key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-webbuilder
     transformers:
       - addprefix: "jenkinsciinfra/builder@"
     scmid: default
@@ -62,7 +62,7 @@ targets:
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-8-windows"
+      key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-8-windows
     transformers:
       - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk8-nanoserver@"
     scmid: default
@@ -72,7 +72,7 @@ targets:
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-11-windows"
+      key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-11-windows
     transformers:
       - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk11-nanoserver@"
     scmid: default
@@ -82,7 +82,7 @@ targets:
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-17-windows"
+      key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-17-windows
     transformers:
       - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk17-nanoserver@"
     scmid: default
@@ -92,7 +92,7 @@ targets:
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-19-windows"
+      key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-19-windows
     transformers:
       - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk19-nanoserver@"
     scmid: default
