--- a/updatecli/weekly.d/jenkinscontroller-agents.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-agents.yaml
@@ -74,7 +74,7 @@ targets:
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agents_setup.windows.osDiskSize"
+      key: $.profile::jenkinscontroller::jcasc.agents_setup.windows.osDiskSize
     scmid: default
   setAzureGalleryImageVersion:
     sourceid: packerImageVersion
@@ -82,7 +82,7 @@ targets:
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.azure_vms_gallery_image.version"
+      key: $.profile::jenkinscontroller::jcasc.agent_images.azure_vms_gallery_image.version
     scmid: default
   setInboundAllInOneContainerImage:
     sourceid: getLatestInboundAllInOneContainerImageX86
@@ -90,7 +90,7 @@ targets:
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-all-in-one"
+      key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-all-in-one
     transformers:
       - addprefix: "jenkinsciinfra/jenkins-agent-ubuntu-22.04@"
     scmid: default
@@ -100,7 +100,7 @@ targets:
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp"
+      key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp
     transformers:
       - addprefix: "jenkins/inbound-agent@"
     scmid: default
