cleanup(ci.jenkins.io) remove leftovers of the gen1 VM
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/jenkinscontroller-tools-maven.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-tools-maven.yaml
@@ -60,7 +60,7 @@ targets:
       - addsuffix: /bin
     spec:
       files:
-        - hieradata/clients/azure.ci.jenkins.io.yaml
+        - hieradata/clients/controller.ci.jenkins.io.yaml
       key: $.profile::jenkinscontroller::jcasc.permanent_agents.s390x-agent.envVars.PATH+MAVEN
     scmid: default
   setMavenToolVersionFors390x:
@@ -71,7 +71,7 @@ targets:
       - addprefix: /home/jenkins/tools/apache-maven-
     spec:
       files:
-        - hieradata/clients/azure.ci.jenkins.io.yaml
+        - hieradata/clients/controller.ci.jenkins.io.yaml
       key: $.profile::jenkinscontroller::jcasc.permanent_agents.s390x-agent.toolLocation[0].home
     scmid: default
 
