feat(jdk21): add the tooling installation for jdk21 beta (#3003)
* feat(jdk21): add the tooling installation for jdk21 beta

* remove agent jdk21, need to be ready in allinone first

* to test gpg key

* move jdk21 version to installer, until beta is over

* remove chore for gpg

* remove chore for gpg

* adding version and subdir in the installer

* remove linux amd64 as tree loaded

--- a/hieradata/clients/controller.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.ci.jenkins.io.yaml
@@ -116,6 +116,20 @@ profile::jenkinscontroller::jcasc:
             type: "zip"
             label: "s390x"
             cpu_arch: "s390x"
+      jdk21:
+        installers:
+          linux-arm64:
+            type: "zip"
+            label: "linux && arm64"
+            cpu_arch: "aarch64"
+            subdir: "jdk-21+34"
+            version: "21-2023-08-09-06-56-beta"
+          s390x:
+            type: "zip"
+            label: "s390x"
+            cpu_arch: "s390x"
+            subdir: "jdk-21+34"
+            version: "21-2023-08-09-06-56-beta"
   permanent_agents:
     s390x-agent:
       remoteFS: /home/jenkins/agent
