--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -196,6 +196,19 @@ profile::jenkinscontroller::jcasc:
             type: "zip"
             label: "windows"
             os: "windows"
+      jdk21:
+        installers:
+          linux-amd64:
+            type: "zip"
+            label: "linux && amd64"
+            subdir: "jdk-21+34"
+            version: "21-2023-08-09-06-56-beta"
+          windows-amd64:
+            type: "zip"
+            label: "windows"
+            os: "windows"
+            subdir: "jdk-21+34"
+            version: "21-2023-08-09-06-56-beta"
   agents_setup:
     windows:
       agentDir: 'C:/Jenkins/agent'
