--- a/hieradata/clients/private.vpn.jenkins.io.yaml
+++ b/hieradata/clients/private.vpn.jenkins.io.yaml
@@ -12,6 +12,7 @@ profile::openvpn::networks:
     peered_network_cidrs:
       - 10.244.0.0/14 # Access to the public-vnet network
       - 10.252.0.0/21 # Access to the public-db network
+      - 10.252.8.0/21 # Access to the cert-ci-jenkins-io network
 profile::openvpn::vpn_network:
   name: private
   # Abstract network
