chore(updatecli) fix manifests for the docker digest breaking change (docker tag added by default)
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/jenkins-lts.yaml
+++ b/updatecli/weekly.d/jenkins-lts.yaml
@@ -41,7 +41,7 @@ conditions:
 
 targets:
   imageTag:
-    name: "Update Docker Image Digest for jenkins/jenkins:lts"
+    name: "Update Docker Image tag for jenkins/jenkins:lts"
     sourceid: jenkinsLatestLTS
     kind: yaml
     spec:
