--- a/updatecli/weekly.d/jenkinscontroller-agents-non-packer.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-agents-non-packer.yaml
@@ -60,7 +60,7 @@ targets:
       file: hieradata/common.yaml
       key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-webbuilder
     transformers:
-      - addprefix: "jenkinsciinfra/builder@"
+      - addprefix: "jenkinsciinfra/builder:"
     scmid: default
   setInboundJDK8WindowsContainerImage:
     sourceid: getLatestInboundMaven8WindowsContainerImage
@@ -70,7 +70,7 @@ targets:
       file: hieradata/common.yaml
       key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-8-windows
     transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk8-nanoserver@"
+      - addprefix: "jenkinsciinfra/inbound-agent-maven:"
     scmid: default
   setInboundJDK11WindowsContainerImage:
     sourceid: getLatestInboundMaven11WindowsContainerImage
@@ -80,7 +80,7 @@ targets:
       file: hieradata/common.yaml
       key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-11-windows
     transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk11-nanoserver@"
+      - addprefix: "jenkinsciinfra/inbound-agent-maven:"
     scmid: default
   setInboundJDK17WindowsContainerImage:
     sourceid: getLatestInboundMaven17WindowsContainerImage
@@ -90,7 +90,7 @@ targets:
       file: hieradata/common.yaml
       key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-17-windows
     transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk17-nanoserver@"
+      - addprefix: "jenkinsciinfra/inbound-agent-maven:"
     scmid: default
   setInboundJDK19WindowsContainerImage:
     sourceid: getLatestInboundMaven19WindowsContainerImage
@@ -100,7 +100,7 @@ targets:
       file: hieradata/common.yaml
       key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-19-windows
     transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk19-nanoserver@"
+      - addprefix: "jenkinsciinfra/inbound-agent-maven:"
     scmid: default
   setInboundJDK21WindowsContainerImage:
     sourceid: getLatestInboundMaven21WindowsContainerImage
@@ -110,7 +110,7 @@ targets:
       file: hieradata/common.yaml
       key: $.profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-21-windows
     transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven:jdk21-nanoserver@"
+      - addprefix: "jenkinsciinfra/inbound-agent-maven:"
     scmid: default
 
 actions:
