--- a/updatecli/weekly.d/jenkinscontroller-tools-jdk21.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-tools-jdk21.yaml
@@ -33,6 +33,8 @@ sources:
         pattern: ".*-ea-.*"
     transformers:
       - trimprefix: "jdk-"
+      - addprefix: "\""
+      - addsuffix: "\""
 
 conditions:
   checkIfReleaseIsAvailable:
