--- a/updatecli/weekly.d/jenkinscontroller-tools-jdk21.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-tools-jdk21.yaml
@@ -1,7 +1,6 @@
 ---
 name: Bump JDK21 version (Jenkins tools) on all controllers
 
-
 scms:
   default:
     kind: github
@@ -23,7 +22,6 @@ scms:
       token: '{{ requiredEnv .github.token }}'
       branch: "main"
 
-
 sources:
   getLatestJDK21EAVersion:
     name: Get the latest Adoptium JDK21 version
@@ -35,8 +33,6 @@ sources:
         pattern: ".*-ea-.*"
     transformers:
       - trimprefix: "jdk-"
-      - addprefix: "\""
-      - addsuffix: "\""
 
 conditions:
   checkIfReleaseIsAvailable:
@@ -44,29 +40,20 @@ conditions:
     spec:
       command: bash ./updatecli/scripts/check-jdk.sh # source input value passed as argument
 
-
 targets:
-  setJDK21VersionLinuxAmd64:
-    name: "Bump JDK21 version on tools"
+  setJDK21Version:
+    name: "Bump JDK21 version on default tools"
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: $.profile::jenkinscontroller::jcasc.tools.jdk.jdk21.installers.linux-amd64.version
+      key: $.profile::jenkinscontroller::jcasc.tools_default_versions.jdk21
     scmid: default
-  setJDK21VersionWindowsAmd64:
-    name: "Bump JDK21 version on tools"
-    kind: yaml
-    spec:
-      file: hieradata/common.yaml
-      key: $.profile::jenkinscontroller::jcasc.tools.jdk.jdk21.installers.windows-amd64.version
-    scmid: default
-
 
 actions:
   default:
     kind: github/pullrequest
     scmid: default
-    title: Bump JDK21 version (Jenkins tools) on all controllers to {{ source "getLatestJDK21EAVersion" }}
+    title: Bump JDK21 version (Jenkins default tools) to {{ source "getLatestJDK21EAVersion" }}
     spec:
       labels:
         - dependencies
