--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -254,6 +254,7 @@ profile::jenkinscontroller::jcasc:
     jdk11: 11.0.20+8
     jdk17: 17.0.8+7
     jdk19: 19.0.2+7
+    jdk21: 21-2023-08-09-06-56-beta
     maven: 3.9.4
   artifact_caching_proxy:
     providers:
