--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -99,8 +99,11 @@ profile::jenkinscontroller::jcasc:
           linux-arm64:
             type: "zip"
             label: "linux && arm64"
-            subdir: "jdk-21+34"
-            version: "21-2023-08-09-06-56-beta"
+            cpu_arch: "aarch64"
+          s390x:
+            type: "zip"
+            label: "s390x"
+            cpu_arch: "s390x"
   permanent_agents:
     s390x-agent:
       remoteFS: /home/jenkins/agent
