feat(updates.jenkins.io): add tools and credentials to `agent.trusted.ci.jenkins.io` for buckets and file share interactions (#3099)
* feat(updates.jenkins.io): add tools and credentials for buckets and file share interactions

* wip architecture

* if aarch64 then arm64, not amd64 :facepalm:

* only linux as kernel for now

* simplify a little

* cleanup

* use a selector

* much more cleaner command

* add --location to avoid breaking curl if a redirection is added later by Microsoft

* azure file storage URL+SAS token stored in a file

* Update dist/profile/manifests/buildagent.pp

Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

* add 'export' in env files

---------

Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -386,3 +386,21 @@ profile::jenkinscontroller::plugins:
   - warnings-ng
   - workflow-aggregator
   - workflow-multibranch
+profile::buildagent::aws_credentials: |
+  [default]
+  aws_access_key_id=AKIAIOSFODNN7EXAMPLE
+  aws_secret_access_key=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+
+  [user1]
+  aws_access_key_id=AKIAI44QH8DHBEXAMPLE
+  aws_secret_access_key=je7MtGbClwBF/2Zp9Utk/h3yCo8nvbEXAMPLEKEY
+profile::buildagent::aws_config: |
+  [default]
+  region=us-west-2
+  output=json
+
+  [profile user1]
+  region=us-east-1
+  output=text
+profile::buildagent::azure_env: |
+  export UPDATES_FILE_SHARE_URL="https://azure.url/?sas_token=abcdef123"
