--- a/updatecli/weekly.d/jenkinscontroller-agents-jnlp-container-jdk17.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-agents-jnlp-container-jdk17.yaml
@@ -12,7 +12,15 @@ scms:
       token: "{{ requiredEnv .github.token }}"
       username: "{{ .github.username }}"
       branch: "{{ .github.branch }}"
+
 sources:
+  packerImageVersion:
+    kind: githubrelease
+    spec:
+      owner: "jenkins-infra"
+      repository: "packer-images"
+      token: "{{ requiredEnv .github.token }}"
+      username: "{{ .github.username }}"
   getLatestInboundJDK17ContainerImage:
     kind: dockerdigest
     spec:
@@ -40,3 +48,4 @@ actions:
     spec:
       labels:
         - dependencies
+
