fix(ci.jenkins.io) specify correct 'java' PATH for the basic jnlp container
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/controller.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.ci.jenkins.io.yaml
@@ -343,6 +343,8 @@ profile::jenkinscontroller::jcasc:
               - ruby
               - webbuilder
           - name: jnlp
+            agentJavaBin: /opt/java/openjdk/bin/java
+            javaHome: /opt/java/openjdk
             labels:
               - default
             cpus: 1
@@ -446,6 +448,8 @@ profile::jenkinscontroller::jcasc:
               - ruby
               - webbuilder
           - name: jnlp
+            agentJavaBin: /opt/java/openjdk/bin/java
+            javaHome: /opt/java/openjdk
             labels:
               - default
             cpus: 1
