Revert "feat(ci.jenkins.io) disable DOKS kubernetes agent cloud for 1.26 upgrade - https://github.com/jenkins-infra/helpdesk/issues/3683 (#3140)"
This reverts commit 8ffed036ec7b30c71e9e3308158d6b8733844283.

--- a/hieradata/clients/controller.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.ci.jenkins.io.yaml
@@ -350,7 +350,7 @@ profile::jenkinscontroller::jcasc:
             cpus: 1
             memory: 1
       doks:
-        enabled: false
+        enabled: true
         provider: do
         credentialsId: "doks-jenkins-agent-sa-token"
         serverCertificate: >
