feat(trusted/agent): add kubectl cli command (#3137)
* feat(trusted/agent): add kubectl cli command

* add execution mod

* use absolute path for chmod

* typo in comment

* version

* change version in hash and yaml to track with updatecli and change fake aws keys

* add a exist test on kubectl tool version

* Apply suggestions from code review

LGTM

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* wip: move kubectl version specification from common to specific setup of agent.trusted

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* wip: simplify unless command for kubectl

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

---------

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>
Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>
Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -388,12 +388,12 @@ profile::jenkinscontroller::plugins:
   - workflow-multibranch
 profile::buildagent::aws_credentials: |
   [default]
-  aws_access_key_id=AKIAIOSFODNN7EXAMPLE
-  aws_secret_access_key=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+  aws_access_key_id=AWS_ACCESS_KEY_ID_EXAMPLE
+  aws_secret_access_key=AWS_SECRET_ACCESS_KEY_EXAMPLE
 
   [user1]
-  aws_access_key_id=AKIAI44QH8DHBEXAMPLE
-  aws_secret_access_key=je7MtGbClwBF/2Zp9Utk/h3yCo8nvbEXAMPLEKEY
+  aws_access_key_id=ANOTHER_AWS_ACCESS_KEY_ID_EXAMPLE
+  aws_secret_access_key=ANOTHER_AWS_SECRET_ACCESS_KEY_EXAMPLE
 profile::buildagent::aws_config: |
   [default]
   region=us-west-2
@@ -402,3 +402,5 @@ profile::buildagent::aws_config: |
   [profile user1]
   region=us-east-1
   output=text
+profile::buildagent::tools_versions:
+  kubectl: v1.26.10
