feat(*.ci.jenkins.io) use JDK21 GA (exception of `s390x` sticking to EA) (#3113)
* chore(updatecli): adding manifest for official jdk21 release from adoptium

* chore misprint

* back to same version of url

* Update updatecli/weekly.d/jenkinscontroller-tools-jdk21.yaml

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* feat(ci.jenkins.io,trusted.ci, cert.ci, agent.trusted) fix adoptium URLs for JDK tool installs and permanent build agents

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* chore(updatecli) track JDK21 EA for s390x agent

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* code review: remove jdk19 references

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

---------

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>
Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>
Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/jenkinscontroller-tools-jdk21.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-tools-jdk21.yaml
@@ -12,25 +12,19 @@ scms:
       token: "{{ requiredEnv .github.token }}"
       username: "{{ .github.username }}"
       branch: "{{ .github.branch }}"
-  temurin21-binaries:
-    kind: "github"
-    spec:
-      user: "{{ .github.user }}"
-      email: "{{ .github.email }}"
-      owner: "adoptium"
-      repository: "temurin21-binaries"
-      token: '{{ requiredEnv .github.token }}'
-      branch: "main"
 
 sources:
-  getLatestJDK21EAVersion:
+  getLatestJDK21Version:
+    kind: githubrelease
     name: Get the latest Adoptium JDK21 version
-    kind: gittag
-    scmid: temurin21-binaries
     spec:
+      owner: "adoptium"
+      repository: "temurin21-binaries"
+      token: "{{ requiredEnv .github.token }}"
+      username: "{{ .github.username }}"
       versionfilter:
         kind: regex
-        pattern: ".*-ea-.*"
+        pattern: "^jdk-21(\\.\\d+)*\\+(\\d+)$"
     transformers:
       - trimprefix: "jdk-"
 
@@ -42,7 +36,7 @@ conditions:
 
 targets:
   setJDK21Version:
-    name: "Bump JDK21 version on default tools"
+    name: "Bump JDK21 version on tools"
     kind: yaml
     spec:
       file: hieradata/common.yaml
@@ -53,7 +47,7 @@ actions:
   default:
     kind: github/pullrequest
     scmid: default
-    title: Bump JDK21 version (Jenkins default tools) to {{ source "getLatestJDK21EAVersion" }}
+    title: Bump JDK21 version (Jenkins tools) on all controllers to {{ source "getLatestJDK21Version" }}
     spec:
       labels:
         - dependencies
