feat(buildagent) manage awscli version and use the v2 line
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -373,5 +373,6 @@ profile::jenkinscontroller::plugins:
   - workflow-aggregator
   - workflow-multibranch
 profile::buildagent::tools_versions:
+  awscli: 2.13.32
   azcopy: 10.21.0-20230928
   kubectl: v1.26.10
