feat(ci.jenkins.io) add azurevm cloud configuration for the new subscription
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/controller.cert.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.cert.ci.jenkins.io.yaml
@@ -92,8 +92,10 @@ profile::jenkinscontroller::jcasc:
         url: "https://groovy.jfrog.io/artifactory/dist-release-local/groovy-zips/apache-groovy-binary-3.0.6.zip"
   cloud_agents:
     azure-vm-agents:
-      azureCredentialsId: "azure-sp-agents" # Managed manually
-      resource_group: "cert-ci-jenkins-io-ephemeral-agents"
+      azureVMClouds:
+        azure-vms:
+          azureCredentialsId: "azure-sp-agents" # Managed manually
+          resource_group: "cert-ci-jenkins-io-ephemeral-agents"
       agent_definitions:
         - name: "ubuntu"
           description: "Ubuntu 22.04 LTS (jdk11-default)"
