--- a/hieradata/rspec/profile_jenkinscontroller.yaml
+++ b/hieradata/rspec/profile_jenkinscontroller.yaml
@@ -62,8 +62,14 @@ profile::jenkinscontroller::jcasc:
               - ruby
             imagePullSecrets: dockerhub-credentials
     azure-vm-agents:
-      azureCredentialsId: "azure-credentials"
-      resource_group: ci-jenkins-io-ephemeral-agents
+      azureVMClouds:
+        azure-vms:
+          azureCredentialsId: "azure-credentials"
+          resource_group: ci-jenkins-io-ephemeral-agents
+        azure-vms-jenkins-sponsorship:
+          azureCredentialsId: "azure-jenkins-sponsorship-credentials" # Managed manually
+          resource_group: ci-jenkins-io-ephemeral-agents
+          maxInstances: 50 # Mandatory to set otherwise it's 10 by default. Worst case: 50 of 8 vCPUS = 400 which is the maximum quota
       agent_definitions:
         - name: "ubuntu-20"
           description: "Ubuntu 20.04 LTS"
