--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -192,9 +192,14 @@ profile::jenkinscontroller::jcasc:
         defaultNamespace: jenkins-agents
         # No agent definitions (to test an empty cloud)
     azure-vm-agents:
-      azureCredentialsId: "azure-credentials"
-      resource_group: ci-jenkins-io-ephemeral-agents
-      maxInstances: 50 # Mandatory to set otherwise it's 10 by default. Worst case: 50 of 8 vCPUS = 400 which is the maximum quota
+      azureVMClouds:
+        azure-vms:
+          azureCredentialsId: "azure-credentials"
+          resource_group: ci-jenkins-io-ephemeral-agents
+        azure-vms-jenkins-sponsorship:
+          azureCredentialsId: "azure-jenkins-sponsorship-credentials" # Managed manually
+          resource_group: ci-jenkins-io-ephemeral-agents
+          maxInstances: 50 # Mandatory to set otherwise it's 10 by default. Worst case: 50 of 8 vCPUS = 400 which is the maximum quota
       agent_definitions:
         - name: "ubuntu-22-inbound"
           description: "Ubuntu 22.04 LTS"
