--- a/hieradata/rspec/profile_jenkinscontroller.yaml
+++ b/hieradata/rspec/profile_jenkinscontroller.yaml
@@ -61,14 +61,14 @@ profile::jenkinscontroller::jcasc:
               - webbuilder
               - ruby
             imagePullSecrets: dockerhub-credentials
-    azure-vm-agents:
-      azureVMClouds:
+    azure_vm_agents:
+      clouds:
         azure-vms:
           azureCredentialsId: "azure-credentials"
-          resource_group: ci-jenkins-io-ephemeral-agents
+          resourceGroup: ci-jenkins-io-ephemeral-agents
         azure-vms-jenkins-sponsorship:
           azureCredentialsId: "azure-jenkins-sponsorship-credentials" # Managed manually
-          resource_group: ci-jenkins-io-ephemeral-agents
+          resourceGroup: ci-jenkins-io-ephemeral-agents
           maxInstances: 50 # Mandatory to set otherwise it's 10 by default. Worst case: 50 of 8 vCPUS = 400 which is the maximum quota
       agent_definitions:
         - name: "ubuntu-20"
@@ -117,7 +117,7 @@ profile::jenkinscontroller::jcasc:
     azure-container-agents:
       aci-windows:
         credentialsId: "azure-credentials"
-        resource_group: ci-jenkins-io-ephemeral-agents
+        resourceGroup: ci-jenkins-io-ephemeral-agents
         agent_definitions:
           - name: maven-11-windows
             os: windows
