feat(ci.jenkins.io) add azurevm cloud configuration for the new subscription (#3189)
* feat(ci.jenkins.io) add azurevm cloud configuration for the new subscription

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* code review: cleanup parameters casing

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* code review: cleanup parameters casing

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

---------

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -191,10 +191,15 @@ profile::jenkinscontroller::jcasc:
         url: SuperSecretThatShouldBeEncryptedInProduction
         defaultNamespace: jenkins-agents
         # No agent definitions (to test an empty cloud)
-    azure-vm-agents:
-      azureCredentialsId: "azure-credentials"
-      resource_group: ci-jenkins-io-ephemeral-agents
-      maxInstances: 50 # Mandatory to set otherwise it's 10 by default. Worst case: 50 of 8 vCPUS = 400 which is the maximum quota
+    azure_vm_agents:
+      clouds:
+        azure-vms:
+          azureCredentialsId: "azure-credentials"
+          resourceGroup: ci-jenkins-io-ephemeral-agents
+        azure-vms-jenkins-sponsorship:
+          azureCredentialsId: "azure-jenkins-sponsorship-credentials" # Managed manually
+          resourceGroup: ci-jenkins-io-ephemeral-agents
+          maxInstances: 50 # Mandatory to set otherwise it's 10 by default. Worst case: 50 of 8 vCPUS = 400 which is the maximum quota
       agent_definitions:
         - name: "ubuntu-22-inbound"
           description: "Ubuntu 22.04 LTS"
@@ -293,7 +298,7 @@ profile::jenkinscontroller::jcasc:
     azure-container-agents:
       aci-windows:
         credentialsId: "azure-credentials"
-        resource_group: ci-jenkins-io-ephemeral-agents
+        resourceGroup: ci-jenkins-io-ephemeral-agents
         agent_definitions:
           - name: maven-8-windows
             os: windows
