Install coverage-badges-extension plugin

--- a/hieradata/clients/controller.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.ci.jenkins.io.yaml
@@ -569,6 +569,7 @@ profile::jenkinscontroller::plugins:
   - build-discarder # Remove older builds if no policy defined - https://github.com/jenkins-infra/helpdesk/issues/3495
   - cloudbees-folder # Provides a job type "Folder"
   - code-coverage-api # Provides nice code covergae view in the Web UI (used by multiple downstream plugins)
+  - coverage-badges-extension # Displays coverage metrics badges for jobs and pipelines
   - config-file-provider # Used to provide Maven settings for proxies
   - configuration-as-code # Required for CasC
   - credentials # Provides Jenkins Credentials management
