--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -347,7 +347,7 @@ profile::jenkinscontroller::plugins:
   - buildtriggerbadge
   - build-discarder # Remove older builds if no policy defined - https://github.com/jenkins-infra/helpdesk/issues/3495
   - cloudbees-folder
-  - code-coverage-api
+  - coverage
   - config-file-provider
   - configuration-as-code
   - credentials
