--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -385,5 +385,5 @@ profile::jenkinscontroller::plugins:
   - workflow-multibranch
 profile::buildagent::tools_versions:
   awscli: 2.13.32
-  azcopy: 10.21.0-20230928
   kubectl: v1.26.10
+profile::azcopy::version: 10.21.0-20230928
