Revert "chore(controller.ci.jenkins.io): disable DigitalOcean agents (#3266)"
This reverts commit ccf510cfd3b08165623ef608ba41c64157cc1d9b.

--- a/hieradata/clients/controller.sponsorship.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.sponsorship.ci.jenkins.io.yaml
@@ -287,7 +287,7 @@ profile::jenkinscontroller::jcasc:
             cpus: 1
             memory: 1
       doks:
-        enabled: false # While working on https://github.com/jenkins-infra/helpdesk/issues/3916
+        enabled: true
         provider: do
         credentialsId: "doks-jenkins-agent-sa-token"
         serverCertificate: >
