feat(ci.jenkins.io/profile::jenkins::controller) add a new ACP with custom URL and no credentials
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -244,6 +244,10 @@ profile::jenkinscontroller::jcasc:
         name: AWS
       azure:
         name: Azure
+      azure-aks-internal:
+        name: Azure AKS internal
+        url: http://artifact-caching-proxy.artifact-caching-proxy:8080/
+        disableCredentials: true
       do:
         name: DigitalOcean
     credentialsId: artifact-caching-proxy-credentials
